--- a/styles.css
+++ b/styles.css
@@ -13,11 +13,10 @@ header {
     background-color: black;
     width: 100%;
     height: 69px;
-    
+    display: flex;
+    justify-content: space-between;
 }
-.nav {
-    display: inline-flex;
-}
+
 li {
     display: inline-block;
     text-decoration: underline;
@@ -56,10 +55,22 @@ div img {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 1000px;
+    width: 1200px;
     margin: 0 auto;
+    justify-content: center;
+    align-content: center;
 }
 .tom figure {
     height: 200px;
     width: 300px;
+}
+footer {
+    text-align: left;
+    margin-left: 20px;
+    padding-bottom: 30px; 
+}
+.section3 {
+    background-image: url(pic/img-locations-background.PNG);
+    
+
 }
